--- a/translations/game.de.xlf
+++ b/translations/game.de.xlf
@@ -18934,5 +18934,14 @@
         <target><![CDATA[Du gräbst dir einen Weg durch die Trümmer, nimmst einige Untersuchungen vor und entfernst den Schmutz von deinen Händen. Nach einigen langen Minuten kannst du ohne jeden Zweifel sagen, was sich unter den Trümmern verbirgt: <strong>%building%</strong>!]]></target>
       </segment>
     </unit>
+    <unit id="gmanddb" name="Persönliche Beschreibung">
+      <notes>
+        <note category="german">Persönliche Beschreibung</note>
+      </notes>
+      <segment>
+        <source>Persönliche Beschreibung</source>
+        <target>Persönliche Beschreibung</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
