--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1368,7 +1368,7 @@
       </notes>
       <segment>
         <source>Einer Stadt beitreten</source>
-        <target>Einer Stadt beitreten</target>
+        <target>Rejoindre une ville</target>
       </segment>
     </unit>
     <unit id="tnT0nBQ" name="Wähle dein nächstes Leben:">
