--- a/translations/game.fr.xlf
+++ b/translations/game.fr.xlf
@@ -18938,7 +18938,7 @@
       </notes>
       <segment>
         <source>Persönliche Beschreibung</source>
-        <target>Persönliche Beschreibung</target>
+        <target>Description personnelle</target>
       </segment>
     </unit>
   </file>
