ES Translation for personal description

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18903,7 +18903,7 @@
       </notes>
       <segment>
         <source>Persönliche Beschreibung</source>
-        <target>Persönliche Beschreibung</target>
+        <target>Descripción personal</target>
       </segment>
     </unit>
   </file>
