EN Translation fix for Public lights

--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -3319,7 +3319,7 @@
       </notes>
       <segment>
         <source>Selbst in der tiefsten Nacht erlaubt dir der fahle Schein der Laternenmasten, deine Ausgrabungen in der Wüste fortzusetzen. Keine Ausreden mehr, um früh ins Bett zu gehen.</source>
-        <target>When the deep night has come, the wan gleams of the lampposts will allow you to continue your excavations of the desert. No more excuses for going to bed.</target>
+        <target>When deep night has come, the dim gleam of lampposts will allow you to continue your desert excavations. No more excuses for going to bed!</target>
       </segment>
     </unit>
     <unit id="ZLkYC3_" name="e3784de">
