various improvements to city join screen

--- a/translations/ghost.fr.xlf
+++ b/translations/ghost.fr.xlf
@@ -1380,5 +1380,23 @@
         <target>Wähle dein nächstes Leben:</target>
       </segment>
     </unit>
+    <unit id="mm_OH8u" name="Ein neues Leben beginnen">
+      <notes>
+        <note category="german">Ein neues Leben beginnen</note>
+      </notes>
+      <segment>
+        <source>Ein neues Leben beginnen</source>
+        <target>Rejoindre une nouvelle existence</target>
+      </segment>
+    </unit>
+    <unit id="NH1qMKw" name="...und mit 39 Mitbürgern in der Hölle schmoren">
+      <notes>
+        <note category="german">...und mit 39 Mitbürgern in der Hölle schmoren</note>
+      </notes>
+      <segment>
+        <source>...und mit 39 Mitbürgern in der Hölle schmoren</source>
+        <target>... et souffrir avec 39 autres citoyens en enfer.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
