--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -12906,7 +12906,7 @@
       </notes>
       <segment>
         <source>Christopher Kolumbus</source>
-        <target>Christopher Kolumbus</target>
+        <target>Cristobal Colón</target>
       </segment>
     </unit>
     <unit id="uzKHOBH" name="Neil Armstrong der Außenwelt">
@@ -13113,7 +13113,7 @@
       </notes>
       <segment>
         <source>Vierklettriges Kleeblatt</source>
-        <target>Maestro del Azar"</target>
+        <target>Maestro del Azar</target>
       </segment>
     </unit>
     <unit id="oSJbjHs" name="Fortuna">
@@ -13176,7 +13176,7 @@
       </notes>
       <segment>
         <source>Außenweltreiseführer</source>
-        <target>Dora la Exploradora"</target>
+        <target>Dora la Exploradora</target>
       </segment>
     </unit>
     <unit id="spLDM3R" name="Außenweltschläfer">
@@ -13365,7 +13365,7 @@
       </notes>
       <segment>
         <source>Menschenfleischliebhaber</source>
-        <target>Devorador de hombres"</target>
+        <target>Devorador de hombres</target>
       </segment>
     </unit>
     <unit id="2fnnqHL" name="Hannibalfan">
@@ -14148,7 +14148,7 @@
       </notes>
       <segment>
         <source>RadioactiveMan</source>
-        <target>RadioactiveMan</target>
+        <target>Hombre radiactivo</target>
       </segment>
     </unit>
     <unit id="qU.xq8H" name="Strahlender Bürger">
@@ -14157,7 +14157,7 @@
       </notes>
       <segment>
         <source>Strahlender Bürger</source>
-        <target>Strahlender Bürger</target>
+        <target>Ciudadano radiante</target>
       </segment>
     </unit>
     <unit id="nGvkh6T" name="Hölle, das esse ich jeden Morgen.">
@@ -15678,7 +15678,7 @@
       </notes>
       <segment>
         <source>Meisterbastler </source>
-        <target>Meisterbastler </target>
+        <target>Manitas hábiles</target>
       </segment>
     </unit>
     <unit id="GH4aDYM" name="feb2e53">
@@ -16753,7 +16753,7 @@
       </notes>
       <segment>
         <source>Sind wir schon da?</source>
-        <target>Sind wir schon da?</target>
+        <target>¿Ya hemos salido de la versión Alfa?</target>
       </segment>
     </unit>
     <unit id="P8a8jTw" name="Stadtallergie">
