ES Translation for select an object to steal in the bank

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18867,7 +18867,7 @@
       </notes>
       <segment>
         <source>Wähle einen Gegenstand aus der Bank aus...</source>
-        <target>Wähle einen Gegenstand aus der Bank aus...</target>
+        <target>Selecciona el objeto que deseas robar del Almacén...</target>
       </segment>
     </unit>
     <unit id="B5sYzl." name="Aufklärer: Ruinen erkunden">
