--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18867,7 +18867,7 @@
       </notes>
       <segment>
         <source>Wähle einen Gegenstand aus der Bank aus...</source>
-        <target>Wähle einen Gegenstand aus der Bank aus...</target>
+        <target>Selecciona el objeto que deseas robar del Almacén...</target>
       </segment>
     </unit>
     <unit id="B5sYzl." name="Aufklärer: Ruinen erkunden">
@@ -18903,7 +18903,7 @@
       </notes>
       <segment>
         <source>Persönliche Beschreibung</source>
-        <target>Persönliche Beschreibung</target>
+        <target>Descripción personal</target>
       </segment>
     </unit>
   </file>
