Fixed some German translations

--- a/translations/buildings.de.xlf
+++ b/translations/buildings.de.xlf
@@ -3283,7 +3283,7 @@
       </notes>
       <segment>
         <source>Zaun (Haus)</source>
-        <target>Zaun (Haus)</target>
+        <target>Zaun</target>
       </segment>
     </unit>
     <unit id="i0KuVv1" name="Schokoladenkreuz">
