--- a/translations/buildings.en.xlf
+++ b/translations/buildings.en.xlf
@@ -3279,7 +3279,7 @@
     </unit>
     <unit id="OK7fp_k" name="Zaun (Haus)">
       <notes>
-        <note category="german">Zaun (Haus)</note>
+        <note category="german">Zaun</note>
       </notes>
       <segment>
         <source>Zaun (Haus)</source>
