--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -7048,7 +7048,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
     </unit>
     <unit id="tCm7v0d" name="Den %rolename% wählen">
       <notes>
-        <note category="german">Den %rolename% wählen</note>
+        <note category="german">Wählen: %rolename%</note>
       </notes>
       <segment>
         <source>Den %rolename% wählen</source>
@@ -18910,6 +18910,15 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>Persönliche Beschreibung</source>
         <target>Personal description</target>
+      </segment>
+    </unit>
+    <unit id="jTUz2Oq" name="Ich beobachte euch...">
+      <notes>
+        <note category="german">Ich beobachte euch...</note>
+      </notes>
+      <segment>
+        <source>Ich beobachte euch...</source>
+        <target>Ich beobachte euch...</target>
       </segment>
     </unit>
   </file>
