--- a/translations/admin.en.xlf
+++ b/translations/admin.en.xlf
@@ -3067,7 +3067,7 @@
           </notes>
           <segment>
               <source>Hausverbesserungen:</source>
-              <target>Hausverbesserungen:</target>
+              <target>Home upgrades:</target>
           </segment>
       </unit>
   </file>
